# robot-monitoring

./: README.md
monitoring-backend/: .pre-commit-config.yaml  Dockerfile  README.md  cli_attr.py  logger.py  main.py  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  setup.cfg  start.py  start.sh
monitoring-backend/app/api/: robots.py
monitoring-backend/app/domain/common/: exceptions.py  log_history.py
monitoring-backend/app/domain/logging/: log_history.py
monitoring-backend/app/domain/robots/: consts.py  robot.py  schemas.py  services.py
monitoring-backend/app/tests/api/: test_robots.py
monitoring-backend/app/tests/domain/robots/: test_robot.py
monitoring-frontend/: .env  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
monitoring-frontend/src/: App.tsx  api.tsx  index.css  main.tsx  vite-env.d.ts
monitoring-frontend/src/components/: column.tsx  robot-list.tsx  robot-log.tsx  robot-logs-list.tsx  robot-power-switch.tsx  robot-reset.tsx  robot-upgrade.tsx  robot.tsx
monitoring-frontend/src/components/ui/: switch.tsx
monitoring-frontend/src/types/: robot.d.ts
