[project]
name = "monitoring-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "davidalshevski",email = "software.dev.davidalsh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "flake8-double-quotes (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
